# iDO

./: .env  .env.development  .eslintrc-auto-import.json  .gitignore  .prettierignore  .project.md  .versionrc.cjs  .versionrc.json  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_CHECKLIST.md  README.md  README.zh-CN.md  app.py  index.html  live2d.html  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  test_dashboard.py  vite.config.ts
backend/: BACKEND_PIPELINE.md  __init__.py  app.py  cli.py  pyproject.toml
backend/agents/: action_agent.py  base.py  cleanup_agent.py  diary_agent.py  event_agent.py  knowledge_agent.py  manager.py  raw_agent.py  session_agent.py  simple_agent.py  supervisor.py  todo_agent.py
backend/api/: fastapi_app.py  server.py  websocket.py
backend/config/: config.toml  loader.py  prompts.toml  prompts_en.toml  prompts_zh.toml
backend/consumption/: __init__.py
backend/core/: _event_state.py  coordinator.py  db.py  events.py  json_parser.py  logger.py  models.py  paths.py  protocols.py  settings.py
backend/db/: init.py  schema.sql
backend/handlers/: __init__.py  activities.py  agents.py  chat.py  dashboard.py  events.py  friendly_chat.py  greeting.py  image.py  insights.py  live2d.py  models.py  models_management.py  perception.py  permissions.py  processing.py  resources.py  screens.py  setup.py  system.py  tray.py
backend/llm/: client.py  manager.py  prompt_manager.py
backend/models/: __init__.py  base.py  entities.py  requests.py  responses.py
backend/perception/: README.md  __init__.py  active_monitor_tracker.py  base.py  (+10 more)
(+294 files in other folders)
