[project]
name = "agent-backend"
version = "0.1.0"
description = "Backend service for Rewind agent system"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.119.0",
    "uvicorn[standard]>=0.38.0",
    "httpx>=0.25.2",
    "loguru>=0.7.2",
    "pynput>=1.8",
    "mss>=10.1",
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "typer>=0.12.0",
    "python-multipart>=0.0.6",
    "toml>=0.10.2",
]

[project.optional-dependencies]
dev = [
    "black>=25.9.0",
    "isort>=7.0.0",
    "mypy>=1.18.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
